RDCC-3121: removing changes that were pulled from Master